--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         Header
      -->
     <header class="d-flex">
-        <div class="netflixLogo col-2">
+        <div class="netflixLogo col-1">
             <a href="index.html" class="logo">
                 <img src="Netflix - 18_04_2022 12-18-00/logo.PNG" alt="">
             </a>
         </div>
-        <nav class="main-menu col-7">
+        <nav class="main-menu col-8">
             <ul class="d-flex">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#tvshow">TV Shows</a></li>
@@ -238,7 +238,7 @@
             </div>
             <div class="sub-link col-12">
                 <a href="">
-                    Audio and subtitle
+                    Audio and Subtitles
                 </a>
                 <a href="">
                     Audio Description
