--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         Header
      -->
     <header class="d-flex">
-        <div class="netflixLogo col-1">
+        <div class="netflixLogo">
             <a href="index.html" class="logo">
                 <img src="Netflix - 18_04_2022 12-18-00/logo.PNG" alt="">
             </a>
         </div>
-        <nav class="main-menu col-8">
+        <nav class="main-menu">
             <ul class="d-flex">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#tvshow">TV Shows</a></li>
@@ -99,7 +99,7 @@
         <!-- 
             Tranding now section
         -->
-        <h1 class="main-heading">Trending Now</h1>
+        <h2 class="main-heading">Trending Now</h2>
         <div class="popular-movie col-12">
             <a href="">
                 <img src="Netflix - 18_04_2022 12-18-00/t1.PNG" alt="">
@@ -125,7 +125,7 @@
         <!-- 
             TV Show section
         -->
-        <h1 class="main-heading" id="tvshow">TV Show</h1>
+        <h3 class="main-heading" id="tvshow">TV Show</h3>
         <div class="popular-movie col-12">
             <a href="">
                 <img src="Netflix - 18_04_2022 12-18-00/tv1.PNG" alt="">
@@ -169,7 +169,7 @@
         <!-- 
             Blockbuster Action & Adventure
         -->
-        <h1 class="main-heading" id="movie">Blockbuster Action & Adventure</h1>
+        <h4 class="main-heading" id="movie">Blockbuster Action & Adventure</h4>
         <div class="popular-movie col-12">
             <a href="">
                 <img src="Netflix - 18_04_2022 12-18-00/m1.PNG" alt="">
@@ -195,7 +195,7 @@
         <!-- 
             Netflix Originals
         -->
-        <h1 class="main-heading" id="originals">Netflix Originals</h1>
+        <h5 class="main-heading" id="originals">Netflix Originals</h5>
         <div class="popular-movie col-12">
             <a href="">
                 <img src="Netflix - 18_04_2022 12-18-00/o1.PNG" alt="">
